unpackaged/main/default/objects/pse__Milestone__c/fields/Auto_Rev_Rec_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rev_Rec_Start_Date__c</fullName>
    <label>Auto Rev Rec Start Date</label>
    <type>Date</type>
</CustomField>