unpackaged/main/default/objects/pse__Milestone__c/fields/Billing_Revenue_Recognition_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Billing_Revenue_Recognition_Guidance__c</fullName>
    <inlineHelpText>Supplemental Billing Event Generation guidance for Invoicing and Revenue Recognition of this Service.</inlineHelpText>
    <label>Billing/Revenue Recognition Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>