unpackaged/main/default/objects/pse__Milestone__c/fields/Delivery_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Guidance__c</fullName>
    <inlineHelpText>Supplemental details and considerations for delivery of this Service.</inlineHelpText>
    <label>Delivery Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>