unpackaged/main/default/objects/pse__Milestone__c/fields/Delivery_Service_SKU__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Please add the SKU that is being delivered against the sold product. Use for OASIS and SOW SKUs.</inlineHelpText>
    <label>Delivery Service SKU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Consulting, Training</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Milestones (Delivery Service SKU)</relationshipLabel>
    <relationshipName>Milestones1</relationshipName>
    <type>Lookup</type>
</CustomField>