unpackaged/main/default/objects/pse__Milestone__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Populate with last day of Quarter in which the Prepaid or $0 NSP Order will expire, per Deferred Report.
For Installs, refer to AR 'Install Open &amp; Close' Report &gt; Actual Ship Date (column M) and add 90 days to Actual Ship Date.
Example: If Actual Ship Date is 01/01/2023 +90 Days = 04/01/2023.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>