unpackaged/main/default/objects/pse__Milestone__c/fields/FFX_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>FFX_Complete_Hours__c</fullName>
    <formula>pse__Billable_Hours_In_Financials__c / pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>