unpackaged/main/default/objects/pse__Milestone__c/fields/Inv_Method__c.field-meta.xml
<CustomField>
    <fullName>Inv_Method__c</fullName>
    <label>Invoice Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>