unpackaged/main/default/objects/pse__Milestone__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <description>ADO 39187</description>
    <formula>IF( Zero_Dollar_NSP__c, "Pre-Paid",TEXT( Product_Name__r.Invoice_Rule__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Method</label>
    <type>Text</type>
</CustomField>