unpackaged/main/default/objects/pse__Milestone__c/fields/Milestone_Help__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Help__c</fullName>
    <formula>HYPERLINK("https://f5.my.salesforce.com/resource/1611165523000/MilestoneHelp", "Milestone Help.pdf")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Help</label>
    <type>Text</type>
</CustomField>