unpackaged/main/default/objects/pse__Milestone__c/fields/MilestoneTemplate__c.field-meta.xml
<CustomField>
    <fullName>MilestoneTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to identify template records so they can be excluded from list views and reports</description>
    <label>Milestone Template</label>
    <type>Checkbox</type>
</CustomField>