unpackaged/main/default/objects/pse__Milestone__c/fields/Oracel_Subcase_Closed__c.field-meta.xml
<CustomField>
    <fullName>Oracel_Subcase_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oracle Sub-Case Closed</label>
    <type>Checkbox</type>
</CustomField>