unpackaged/main/default/objects/pse__Milestone__c/fields/Oracle_Subcase_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Subcase_ID__c</fullName>
    <description>Manually enter corresponding Subcase ID per Install/Deploy SKU.</description>
    <inlineHelpText>Manually enter corresponding Subcase ID per Install/Deploy SKU.</inlineHelpText>
    <label>Oracle Sub-Case ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>