unpackaged/main/default/objects/pse__Milestone__c/fields/PM_Hrs_Estimate__c.field-meta.xml
<CustomField>
    <fullName>PM_Hrs_Estimate__c</fullName>
    <description>8/19: M.Kim - renamed Label from Allocated Project Management Hours to PM Hrs: Estimate.
ADO 39187 - Change label from Standard Hours to Allocated Standard Hours</description>
    <formula>Product_Name__r.Allocated_Project_Management_Hours__c</formula>
    <inlineHelpText>Project Management Hours allocated to Service Delivery during Business Hours: M-F 8am-6pm.</inlineHelpText>
    <label>PM Hrs: Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>