unpackaged/main/default/objects/pse__Milestone__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>