unpackaged/main/default/objects/pse__Milestone__c/fields/Premium_Hrs_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Premium_Hrs_Estimate__c</fullName>
    <description>7/8: M.Kim - renamed Label from Allocated Premium Hours to Premium Hrs: Estimate
ADO 39187 - Changed label from Premium Hours to Allocated Premium Hours</description>
    <formula>Product_Name__r.Premium_Hours__c</formula>
    <inlineHelpText>Consulting Hours allocated to Service Delivery outside of Business Hours: M-F 6pm-8am, weekends.</inlineHelpText>
    <label>Premium Hrs: Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>