unpackaged/main/default/objects/pse__Milestone__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>ADO 39187</description>
    <formula>Product_Name__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>