unpackaged/main/default/objects/pse__Milestone__c/fields/Product_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Text__c</fullName>
    <formula>Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Text</label>
    <type>Text</type>
</CustomField>