unpackaged/main/default/objects/pse__Milestone__c/fields/Product_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Product_Skill_Set__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>Product_Name__r.Product_Skill_Set__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Skill Set</label>
    <type>Text</type>
</CustomField>