unpackaged/main/default/objects/pse__Milestone__c/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <formula>pse__Project__r.pse__Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Group</label>
    <type>Text</type>
</CustomField>