unpackaged/main/default/objects/pse__Milestone__c/fields/PSA_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>PSA_Project_Manager__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.pse__Project_Manager__r.Full_Name__c</formula>
    <inlineHelpText>Project Manager or Project Coordinator.
Responsible for operational functions on PSA Project such as Customer Engagement Scheduling, Resource Staffing, Assignment Mgmt, and Billing+Rev Rec processing. See field on Project page to make updates.</inlineHelpText>
    <label>PSA Project Manager</label>
    <type>Text</type>
</CustomField>