unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Hours__c</fullName>
    <inlineHelpText>The Total scoped hours for all resources on the milestone.  The sum of all planned hours on billable milestones for a project should equal the Planned Hours on the Project in the Financial and Hours section.</inlineHelpText>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>