unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Converted to Training</fullName>
            </value>
            <value>
                <fullName>Work Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Sign-off</fullName>
            </value>
            <value>
                <fullName>Customer Sign-off Completed</fullName>
            </value>
            <value>
                <fullName>Revenue Recognized, Work not Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>