unpackaged/main/default/objects/pse__Milestone__c/fields/Remaining_Allocated_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Allocated_Expenses__c</fullName>
    <formula>IF((pse__Billable_Expenses_In_Financials__c + pse__Billable_Expenses_Submitted__c + pse__Non_Billable_Expenses_In_Financials__c + pse__Non_Billable_Expenses_Submitted__c)&gt;0,  Travel_Expense_Estimate__c  - (pse__Billable_Expenses_In_Financials__c + pse__Billable_Expenses_Submitted__c + pse__Non_Billable_Expenses_In_Financials__c + pse__Non_Billable_Expenses_Submitted__c),  Travel_Expense_Estimate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Allocated Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>