unpackaged/main/default/objects/pse__Milestone__c/fields/Rev_Rec_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_End_Date__c</fullName>
    <description>ADO 39187</description>
    <label>Rev Rec End Date</label>
    <type>Date</type>
</CustomField>