unpackaged/main/default/objects/pse__Milestone__c/fields/Rev_Rec_Method__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Method__c</fullName>
    <description>ADO 39187</description>
    <formula>TEXT( Product_Name__r.Rev_Rec_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rec Method</label>
    <type>Text</type>
</CustomField>