unpackaged/main/default/objects/pse__Milestone__c/fields/Rev_Rec_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Trigger_Date__c</fullName>
    <description>ADO 39187</description>
    <formula>TEXT( Product_Name__r.Rev_Rec_Trigger_Date__c )</formula>
    <label>Rev Rec Trigger Date</label>
    <type>Text</type>
</CustomField>