unpackaged/main/default/objects/pse__Milestone__c/fields/Rev_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Type__c</fullName>
    <description>ADO 39187</description>
    <formula>TEXT( Product_Name__r.Rev_Rec_Type__c )</formula>
    <label>Rev Rec Type</label>
    <type>Text</type>
</CustomField>