unpackaged/main/default/objects/pse__Milestone__c/fields/Revenue_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Expiration__c</fullName>
    <description>ADO 39187</description>
    <formula>IF(Zero_Dollar_NSP__c, "12 Months", TEXT( Product_Name__r.Revenue_Expiration__c ))</formula>
    <label>Revenue Expiration</label>
    <type>Text</type>
</CustomField>