unpackaged/main/default/objects/pse__Milestone__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Discounted selling price of an item from regular List Price.  Should match the PO and Invoice amount.</inlineHelpText>
    <label>Sold Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>