unpackaged/main/default/objects/pse__Milestone__c/fields/Scheduling_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Guidance__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Supplemental details and considerations for Staffing and Scheduling delivery of this Service.</inlineHelpText>
    <label>Scheduling Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>