unpackaged/main/default/objects/pse__Milestone__c/fields/Standard_Hrs_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Hrs_Estimate__c</fullName>
    <description>8/19: M.Kim - renamed Label from Allocated Standard Hours to Standard Hrs: Estimate
ADO 39187 - Change label from Standard Hours to Allocated Standard Hours</description>
    <formula>Product_Name__r.Standard_Hours__c</formula>
    <inlineHelpText>Consulting Hours allocated to Service Delivery during Business Hours: M-F 8am-6pm.</inlineHelpText>
    <label>Standard Hrs: Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>