unpackaged/main/default/objects/pse__Milestone__c/fields/Sub_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Sub_Case_Created_Date__c</fullName>
    <inlineHelpText>From AR Installs Report. Typically the date when equipment was shipped and Invoiced. Rev Rec is 90 days after this or upon Delivery, if earlier. Upon populating this Field, 'Target Date' Field automatically calculates to 90 days out.</inlineHelpText>
    <label>Oracle Sub-Case Create Date</label>
    <type>Date</type>
</CustomField>