unpackaged/main/default/objects/pse__Milestone__c/fields/Task_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Task_Percent_Complete__c</fullName>
    <formula>IF(pse__Total_Number_of_Tasks__c=0, null, pse__Total_Number_of_Completed_Tasks__c /  pse__Total_Number_of_Tasks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percent complete based on completed tasks</inlineHelpText>
    <label>Task Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>