unpackaged/main/default/objects/pse__Milestone__c/fields/Task_Progress__c.field-meta.xml
<CustomField>
    <fullName>Task_Progress__c</fullName>
    <formula>IMAGE('/resource/1398170360000/BlueProgressBar', 'Test', 10, ( Task_Total_Percent_Complete_Points__c * 100 )) &amp;
IMAGE('/resource/1398170333000/ProgressBorder', 'Test', 10, (100 - Task_Total_Percent_Complete_Points__c * 100 )) &amp;
' ' &amp;
TEXT (  ROUND(Task_Total_Percent_Complete_Points__c * 100,2) ) &amp;
'%'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Progress based on task points</inlineHelpText>
    <label>Task Progress</label>
    <type>Text</type>
</CustomField>