unpackaged/main/default/objects/pse__Milestone__c/fields/Task_Total_Percent_Complete_Points__c.field-meta.xml
<CustomField>
    <fullName>Task_Total_Percent_Complete_Points__c</fullName>
    <formula>IF ( pse__Total_Points_from_Tasks__c =0, 0,  pse__Total_Completed_Points_from_Tasks__c/pse__Total_Points_from_Tasks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Task percent complete based on Task Points</inlineHelpText>
    <label>Task Total Percent Complete (Points)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>