unpackaged/main/default/objects/pse__Milestone__c/fields/TE_Remaining__c.field-meta.xml
<CustomField>
    <fullName>TE_Remaining__c</fullName>
    <description>Milestone Amount - Billable Expenses in Financials</description>
    <formula>IF(Rev_Rec_Rule__c = "Expense Based", Sales_Price__c - pse__Billable_Expenses_In_Financials__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Milestone Amount - Billable Expenses in Financials</inlineHelpText>
    <label>Expenses Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>