unpackaged/main/default/objects/pse__Milestone__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>ADO 39187</description>
    <formula>Product_Name__r.Term__c</formula>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>