unpackaged/main/default/objects/pse__Milestone__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <formula>pse__Project__r.pse__Region__r.Theater__r.Name</formula>
    <inlineHelpText>Auto-populated based on Region. If Top level Region is selected (Americas, EMEA, APCJ), Theater will be blank.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>