unpackaged/main/default/objects/pse__Milestone__c/fields/Time_Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>Time_Expense_Approver__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Expense Approver</label>
    <type>Text</type>
</CustomField>