unpackaged/main/default/objects/pse__Milestone__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Billable_Expenses_In_Financials__c  +  pse__Billable_Expenses_Submitted__c  +  pse__Non_Billable_Expenses_In_Financials__c  +  pse__Non_Billable_Expenses_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>