unpackaged/main/default/objects/pse__Milestone__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training</label>
    <type>Checkbox</type>
</CustomField>