unpackaged/main/default/objects/pse__Milestone__c/fields/Trips_Included__c.field-meta.xml
<CustomField>
    <fullName>Trips_Included__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>Product_Name__r.Number_of_Trips_Included__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated number of trips for on-site Delivery. Refer to Travel Expense Field for amount of funds allocated to travel.</inlineHelpText>
    <label># Trips Included</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>