unpackaged/main/default/objects/pse__Milestone__c/fields/X90_Days_From_Booking__c.field-meta.xml
<CustomField>
    <fullName>X90_Days_From_Booking__c</fullName>
    <description>Opportunity Close Date + 90 Days</description>
    <formula>pse__Project__r.pse__Opportunity__r.CloseDate + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Close Date + 90 Days</inlineHelpText>
    <label>90 Days From Ship Date</label>
    <type>Date</type>
</CustomField>