unpackaged/main/default/objects/pse__Milestone__c/fields/Zero_Dollar_NSP__c.field-meta.xml
<CustomField>
    <fullName>Zero_Dollar_NSP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Service included at no cost to Customer. If not used in 12 mo. from Order Booked Date, deferred Consulting Rev is reversed and recognized as Product Rev at end of corresponding Qtr.
When checked, Invoice Method = PrePaid and Rev Expiration = 12 months.</inlineHelpText>
    <label>$0 NSP</label>
    <type>Checkbox</type>
</CustomField>