unpackaged/main/default/objects/pse__Milestone__c/recordTypes/Automatic_Rev_Rec.recordType-meta.xml
<RecordType>
    <fullName>Automatic_Rev_Rec</fullName>
    <active>true</active>
    <label>Automatic Rev Rec</label>
</RecordType>