unpackaged/main/default/objects/pse__Milestone__c/recordTypes/Billing_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Billing_Milestone</fullName>
    <active>true</active>
    <description>Use this Record Type for Fixed-Price SKUs to collect Hours &amp; Expenses contributing to the Service. Billing/Rev Rec Amount comes from the Milestone Amount field (Fixed Amount) regardless of amount of Hours delivered.</description>
    <label>Fixed Price Milestone</label>
</RecordType>