unpackaged/main/default/objects/pse__Milestone__c/recordTypes/Installs_Milestone_Fixed_Price.recordType-meta.xml
<RecordType>
    <fullName>Installs_Milestone_Fixed_Price</fullName>
    <active>true</active>
    <description>Use this Record Type for Installs. Includes Business Logic and Fields unique to Installs such as automated 90-Day Rev Rec Date Calculation and Fields to track Oracle Sub-Case status (open vs closed), and Sub-Case ID.</description>
    <label>Installs Milestone</label>
</RecordType>