unpackaged/main/default/objects/pse__Milestone__c/recordTypes/NonBillable_Milestone.recordType-meta.xml
<RecordType>
    <fullName>NonBillable_Milestone</fullName>
    <active>true</active>
    <description>Use this Record Type to track Time Credited Hours contributing to Productive Utilization; Never Billed to the Customer.</description>
    <label>NonBillable Milestone</label>
</RecordType>