unpackaged/main/default/objects/pse__Milestone__c/recordTypes/Task_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Task_Milestone</fullName>
    <active>true</active>
    <description>Use this Record Type for Time &amp; Materials SKUs to collect Hours &amp; Expenses contributing to the Service. Billing/Rev Rec Amount is calculated from Assignment Bill Rate * Approved unbilled Time Card Hours.</description>
    <label>T&amp;M Milestone</label>
</RecordType>