unpackaged/main/default/objects/pse__Milestone__c/recordTypes/Time_Credited_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Time_Credited_Milestone</fullName>
    <active>true</active>
    <description>This Record Type is reserved for Internal F5 Projects (Scoping/Pre-Sale, Tech Summit, Employee Training).  DO NOT USE when creating Milestones for Customer-Facing Projects.</description>
    <label>Time Credited Milestone</label>
</RecordType>