unpackaged/main/default/objects/pse__Milestone__c/validationRules/Milestone_Edit_Template_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Edit_Template_Checkbox</fullName>
    <active>true</active>
    <description>Milestone Template checkbox can't be changed without the User Special Permision.</description>
    <errorConditionFormula>ISCHANGED( MilestoneTemplate__c ) &amp;&amp;
NOT(INCLUDES( $User.Special_Permissions__c, 'Milestone_Edit_Template_Chexkbox'))</errorConditionFormula>
    <errorDisplayField>MilestoneTemplate__c</errorDisplayField>
    <errorMessage>Milestone Template checkbox can only be modified by a member of the PSA Core team or TS.</errorMessage>
</ValidationRule>