unpackaged/main/default/objects/pse__Milestone__c/listViews/Auto_Rev_Rec_Milestones_for_updating.listView-meta.xml
<ListView>
    <fullName>Auto_Rev_Rec_Milestones_for_updating</fullName>
    <columns>pse__Project__c</columns>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>pse__Milestone_Amount__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>pse__Target_Date__c</columns>
    <columns>pse__Actual_Date__c</columns>
    <columns>pse__Exclude_from_Billing__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rev_Rec_Type__c</field>
        <operation>equals</operation>
        <value>AUTOMATIC</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>pse__Actual_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>americas</value>
    </filters>
    <label>For PSA 2.0: Auto Rev Rec Milestones</label>
</ListView>