unpackaged/main/default/objects/pse__Milestone__c/listViews/Billing_Milestones.listView-meta.xml
<ListView>
    <fullName>Billing_Milestones</fullName>
    <columns>PSA_Version__c</columns>
    <columns>pse__Status__c</columns>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>pse__Closed_for_Time_Entry__c</columns>
    <columns>pse__Closed_for_Expense_Entry__c</columns>
    <columns>pse__Exclude_from_Billing__c</columns>
    <columns>pse__Include_In_Financials__c</columns>
    <columns>pse__Approved__c</columns>
    <columns>pse__Eligible_for_Billing__c</columns>
    <columns>pse__Billed__c</columns>
    <columns>pse__Invoiced__c</columns>
    <columns>pse__Milestone_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>pse__Milestone__c.Billing_Milestone</value>
    </filters>
    <filters>
        <field>pse__Project__c</field>
        <operation>notContain</operation>
        <value>Template</value>
    </filters>
    <filters>
        <field>PSA_Version__c</field>
        <operation>equals</operation>
        <value>PSA 2.0</value>
    </filters>
    <label>PSA 2.0:  Fixed Price Milestones</label>
    <sharedTo>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>